# dafoam-rag-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-cuda.txt  requirements.txt
config/: mcp-config-entry.json  repository_sources.json  settings.py
data/chroma_code/: chroma.sqlite3
data/chroma_code/1372f565-32b8-4e5d-abc7-6b24aa9e2dba/: index_metadata.pickle
data/chroma_code/72e9b3e6-efe1-47c2-b419-69c4f895f04e/: index_metadata.pickle
data/chroma_code/8218f9f2-038b-4156-9b9f-9bd4209e1c20/: index_metadata.pickle
data/chroma_code/e1675a66-4c65-4ba1-8bbc-5a0454c9c52e/: index_metadata.pickle
data/chroma_docs/: chroma.sqlite3
data/chroma_docs/8188f7fc-bf5c-457a-868c-a7921ed2602e/: index_metadata.pickle
data/chroma_tests/: chroma.sqlite3
data/chroma_tutorials/: chroma.sqlite3
data/chroma_tutorials/6b10f548-dda8-4bef-a57a-0f47f2810c4b/: index_metadata.pickle
scripts/: Start-ChromaServer.ps1  bakeoff_local_embeddings.py  benchmark_embeddings.py  index_code.py  index_docs.py  index_tests.py  index_tutorials.py  test_e2e.py
src/mcp/: chroma_sse_server.py
src/rag/: embeddings.py
