[project]
name = "dafoam-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "atlassian-python-api>=3.41.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.5.0",
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
    "jira>=3.8.0",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-llms-ollama>=0.3.0",
    "llama-index-tools-mcp>=0.1.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "mcp>=1.0.0",
    "ollama>=0.3.0",
    "oracledb>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.36.0,<5.0.0",
    "tree-sitter>=0.21.0",
]

[project.optional-dependencies]
cuda = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
]

[project.scripts]
dafoam-rag-server = "src.mcp.chroma_sse_server:main"

[tool.uv.sources]
torch = [{ index = "torch-gpu", extra = "cuda" }]
torchvision = [{ index = "torch-gpu", extra = "cuda" }]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "data"
